Make sure skip to content link is not visible when scrolling up

--- a/app/assets/stylesheets/application/skip.css
+++ b/app/assets/stylesheets/application/skip.css
@@ -10,10 +10,12 @@
   padding-inline: 1rem;
   block-size: calc(var(--header-height) - 1em);
   z-index: 1;
+  opacity: .01;
 }
 
 .Skip:focus {
   inset-block-start: 50%;
   transform: translate(-50%, -50%);
   outline-offset: 0;
+  opacity: 1;
 }
